# aw-watcher-window-wayland

./: Cargo.toml  README.md  flake.nix
src/: build.rs  client.rs  compositor.rs  current_window.rs  idle.rs  main.rs  watcher.rs
src/compositors/: mod.rs  niri.rs  wlr_protocols.rs
