[package]
name = "aw-watcher-window-wayland"
version = "0.1.0"
authors = ["Johan Bjäreholt <johan@bjareho.lt>"]
edition = "2018"
build = "src/build.rs"

[build-dependencies]
wayland-scanner = "0.29"

[dependencies]
smallvec = "1.0"
lazy_static = "1.2"
wayland-client = "0.29"
wayland-commons = "0.29"
wayland-sys = "0.29"
serde_json = "1.0"
chrono = "0.4"
mio = "0.6"
timerfd = "1.0"
file-lock = "1.1"
appdirs = "0.2"
gethostname = "0.2"
getopts = "0.2"

aw-client-rust = { git = "https://github.com/ActivityWatch/aw-server-rust.git" }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
