[package]
name = "aw-watcher-window-wayland"
version = "0.1.0"
authors = [
  "Johan Bjäreholt <johan@bjareho.lt>",
  "Christopher Mühl <hi@toph.so>"
]
edition = "2024"
build = "src/build.rs"

[build-dependencies]
wayland-scanner = { version = "0.29", optional = true }

[dependencies]
anyhow = "1.0.100"
smallvec = "1.0"
lazy_static = "1.2"
wayland-client = { version = "0.29", optional = true }
wayland-commons = { version = "0.29", optional = true }
wayland-sys = { version = "0.29", optional = true }
niri-ipc = { version = "25.11", optional = true }
serde_json = "1.0"
chrono = "0.4"
mio = { version = "1.1", features = ["os-ext"] }
timerfd = "1.0"
file-lock = "1.1"
appdirs = "0.2"
gethostname = "0.2"
getopts = "0.2"
aw-client-rust = { git = "https://github.com/ActivityWatch/aw-server-rust.git" }

[features]
default = ["wlr-protocols", "niri"]
wlr-protocols = ["dep:wayland-client", "dep:wayland-commons", "dep:wayland-sys", "dep:wayland-scanner"]
niri = ["dep:niri-ipc"]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
